# tfnn

./: .gitignore  README.md  pyproject.toml
tfnn/: attention.py  clothingID.py  mnist.py  util.py
